// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpgradeTrialClusterDialog /> renders correctly 1`] = `
<Modal
  data-test-id="upgrade-trial-cluster-dialog"
  modalSize="small"
  onClose={[Function]}
  onTertiaryClick={[Function]}
  primaryLink="https://www.openshift.com/products/dedicated/contact/"
  primaryText="Contact sales"
  showSecondary={false}
  showTertiary={true}
  tertiaryText="Cancel"
  title="Upgrade cluster from Trial"
>
  <p />
  <Form
    onSubmit={[Function]}
  >
    <p>
      Convert this trial cluster to a fully supported OpenShift Dedicated cluster
      <Alert
        className="upgrade-trial-no-quota"
        isInline={true}
        title="Your organization doesn't have enough quota to upgrade this cluster."
        variant="warning"
      >
        <Link
          to="/subscriptions"
        >
          <Button
            id="subscriptions"
            variant="link"
          >
            View your available quota
          </Button>
        </Link>
      </Alert>
    </p>
  </Form>
</Modal>
`;

exports[`<UpgradeTrialClusterDialog /> renders correctly when an erorr occurs 1`] = `
<Modal
  data-test-id="upgrade-trial-cluster-dialog"
  modalSize="small"
  onClose={[Function]}
  onTertiaryClick={[Function]}
  primaryLink="https://www.openshift.com/products/dedicated/contact/"
  primaryText="Contact sales"
  showSecondary={false}
  showTertiary={true}
  tertiaryText="Cancel"
  title="Upgrade cluster from Trial"
>
  <p>
    <ErrorBox
      message="Error upgrading cluster"
      response={
        Object {
          "error": true,
          "errorMessage": "this is an error",
        }
      }
    />
  </p>
  <Form
    onSubmit={[Function]}
  >
    <p>
      Convert this trial cluster to a fully supported OpenShift Dedicated cluster
      <Alert
        className="upgrade-trial-no-quota"
        isInline={true}
        title="Your organization doesn't have enough quota to upgrade this cluster."
        variant="warning"
      >
        <Link
          to="/subscriptions"
        >
          <Button
            id="subscriptions"
            variant="link"
          >
            View your available quota
          </Button>
        </Link>
      </Alert>
    </p>
  </Form>
</Modal>
`;
